fix line height on mobile pre>code

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -503,6 +503,6 @@ article {}
 
     code {
         white-space: break-spaces;
-        line-height: 3rem;
+        /*line-height: 3rem;*/
     }
 }
